specification testing on secondMax