@@ -1,95 +1,118 @@
 package com.interview;
 
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.params.provider.Arguments.of;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 class MathProblemTest {
-    static Stream<Arguments> parameters() {
-        return Stream.of(
-                of(null, null),
-                of(numbers(), null),
-                of(numbers(1), null),
-                of(numbers(1, 2), 1),
-                of(numbers(1, null), null),
-                of(numbers(1, 2, 3), 2)
-        );
+    @Test
+    void secondMaxEmptyNums() {
+        List<Integer> emptyNums = List.of();
+
+        assertNull(MathProblem.secondMax(null));
+        assertNull(MathProblem.secondMax(emptyNums));
     }
 
-    static List<Integer> numbers(Integer... nums) {
-        return Arrays.asList(nums);
+    @Test
+    void secondMaxNumsSizeOne() {
+        List<Integer> singleList = List.of(1);
+        List<Integer> nullList = new ArrayList<>() {{
+            add(null);
+        }};
+
+        assertNull(MathProblem.secondMax(singleList));
+        assertNull(MathProblem.secondMax(nullList));
     }
 
-    @ParameterizedTest
-    @MethodSource("parameters")
-//    @Test
-    void secondMax(List<Integer> nums, Integer output) {
-        /*
+    @Test
+    void secondMaxNumsSizeTwo() {
+        List<Integer> validList = List.of(2, 1);
+        List<Integer> listWithNull = new ArrayList<>() {{
+            add(1);
+            add(null);
+        }};
 
-        BOUNDARY
-        OFF POINTS:
-        input size = 1
-        input size = 0
-        input null
-        input list null
+        assertEquals(MathProblem.secondMax(validList), 1);
+        assertNull(MathProblem.secondMax(listWithNull));
+    }
 
-        ON POINTS:
-        input size = 2
-        input size > 1
+    @Test
+    void secondMaxNumsMoreThanTwo() {
+        List<Integer> validList = List.of(3, 2, 1);
+        List<Integer> listWithNullOne = new ArrayList<>() {{
+            add(1);
+            add(null);
+        }};
+        List<Integer> listWithNullTwo = new ArrayList<>() {{
+            add(1);
+            add(null);
+            add(3);
+        }};
 
-
-        Partitions:
-        INPUTS
-        valid input, input size > 1.
-        invalid input, input size = 1.
-        invalid input, empty input.
-        invalid input, list null
-
-        OUTPUTS
-        null, or any numbers.
-
-        SPECIAL CASES:
-        empty and null values.
-
-
-
-        SPECIFICATION TEST CASE:
-        input size = 1 [x], output null [x]
-        input size = 0 [x], output null [x]
-        input size = null [x], output null [x]
-        input size = 2 (1,2)[x], output n [x]
-        input (null...) size < 2 [x], output null [x]
-        input size > 2 [x], output n [x]
-
-        SPECIAL TEST CASES
-        input null [x]
-        input size = 0 [x]
-        output null [0]
-
-
-        TEST CASES:
-        SPECIAL CASES:
-        T[1] = input null, output null
-        T[2] = input size = 0, output null
-        T[3] = input (1) [1], output null
-
-        SPECIFICATION CASES:
-        T[4] = input [1,2] || out 1
-        T[4] = input [1,null] || out null
-        T[4] = input [1,2,3] || out 2
-         */
-        assertEquals(MathProblem.secondMax(nums),output);
+        assertEquals(MathProblem.secondMax(validList), 2);
+        assertNull(MathProblem.secondMax(listWithNullOne));
+        assertEquals(MathProblem.secondMax(listWithNullTwo), 1);
     }
 
     @Test
     void secondMin() {
     }
 }
+/*
+        PARTITIONS
+        [[INPUTS]]
+        [nums]
+        nums = null
+        nums = size 0
+        nums = size 1
+        nums = size 2
+        nums = size > 2
+        nums = size 2 with null item
+
+        [[OUTPUTS]]
+        [out]
+        out = null
+        out = numbers
+
+
+        BOUNDARIES
+        [[ON POINTS]]
+        [nums]
+        nums = size 2
+        nums = size > 2
+
+        [[OFF POINTS]]
+        [nums]
+        nums = null
+        nums = size 0
+        nums = size 1
+        nums = size 2 with null item
+        nums = size n with null items
+
+
+        IDENTIFY PARTITION NOT TO BE TESTED MULTIPLE TIMES MARKED WITH [x]
+        nums = null [x], empty [x], size 1 [x], size 2 [x], size > 2
+
+
+        DERIVED TEST CASES
+        [exceptional test cases]
+        T[1] = nums null
+        T[2] = nums empty list
+
+        [nums size 1]
+        T[3] = nums [1]
+        T[4] = nums [null]
+
+        [nums size 2]
+        T[5] = nums [1,2]
+        T[6] = nums [1,null]
+
+        [nums size > 2]
+        T[7] = nums [1,2,3]
+        T[8] = nums [1,2,null]
+        T[8] = nums [1,2,null,4]
+*/
